# rust_api_openai

./: .gitignore  Cargo.toml  README.md
src/: main.rs
