[package]
name = "rust_api_openai"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenvy = "0.15.7"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }